Fix Store Info Headers on Mobile

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -237,6 +237,7 @@ img.paper-icon {
   .store-info-item-header {
     width: 100%;
     text-align: center;
+    padding: 0.5rem 0;
   }
 
   .store-info-item-text {
